syntax = "proto3";
package api;

import "common.proto";

option go_package ="seneca/api/types";

// key(user_id, id)
message RawVideo {
    string user_id = 1;
    string id = 2;
    // In the form <USER_ID>.<CREATE_TIMESTAMP_MS>.RAW_VIDEO.mp4
    string cloud_storage_file_name = 3;
    // When the video begins in ms.
    int64 create_time_ms = 4;
    repeated string cut_video_id = 5;
    int64 duration_ms = 6;
}

// key(user_id, id)
message CutVideo {
    string user_id = 1;
    string id = 2;
    // In the form <USER_ID>.<CREATE_TIMESTAMP_MS>.CUT_VIDEO.mp4
    string cloud_storage_file_name = 3;
    // When the video begins.
    int64 create_time_ms = 4;
    string raw_video_id = 5;
    repeated api.Location locations = 6;
}

// // key(user_id, id)
// message RawLocation {
//     string user_id = 1;
//     string id = 2;
//     // Location includes timestamp.
//     Location location = 3;
// }

// // key(user_id, id)
// message RawMotion {
//     string user_id = 1;
//     string id = 2;
//     int64 velocity = 3;
//     int64 acceleration = 4;
//     int64 timestamp_ms = 5;
// }